<resources>
    <string name="app_name">fridge_manger2</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <!--setting-->
    //設定
    <string name="menu_item_setting">設定</string>
    <string name="fridge_setting">設定冰箱層板</string>
    <string name="show_food_name">顯示食物名稱</string>
    <string name="change_fridge">切換冰箱介面</string>>
    //LINE 帳號
    <string name="line_dialog_setting">綁定LINE帳號</string>
    <string name="line_dialog_title">LINE帳號</string>
    <string name="input_line_account"> 輸入LINE帳號 </string>
    <!--app bar buttom-->
    <string name="menu_home">首頁</string>
    <string name="menu_settings">設定</string>
    <string name="menu_filter">篩選</string>
    <string name="feature1">互動式管理食材</string>

    //新增、刪除、選擇冰箱
    <string name="fridge_dialog_title1">新增共享冰箱</string>
    <string name="fridge_dialog_title2">取消共享冰箱</string>
    <string name="input_fridge_name">輸入將共享的冰箱 ID </string>

    <!--feature content-->
    <string name="feature2">自行設計冰箱介面</string>
    <string name="feature3">一人多箱</string>
    <string name="feature4">與家人共享冰箱</string>

    <string name="descript1">像遊戲的方式，藉由拖移食材icon新增、移動或刪除食物</string>
    <string name="descript2">內建常見的冰箱格局，也可以自行調整以符合自家冰箱格局</string>
    <string name="descript3">你可以同時管理多台冰箱，將自家、需要照顧的阿公家、宿舍的冰箱都打點清楚!</string>
    <string name="descript4">家人可以一起管理同一台冰箱，隨時掌握食材最新狀況</string>

    <!--button-->
    <string name="start">開始使用</string>

    <!-- filter content -->
    <string name="filter_food_name">食物名稱</string>
    <string name="text_filter_date">到期燈號</string>
    <string name="text_filter_category">食物種類</string>
    <string name="text_for_red_chip">兩天內到期</string>
    <string name="text_for_yellow_chip">一周內到期</string>
    <string name="text_for_green_chip">保存期限超過一周</string>
    <string name="name1">name1</string>
    <string name="category1">category1</string>
    <string name="text_filter_title">篩選食材</string>
    <string name="text_setting_title">冰箱設定</string>
    <string name="setting_bar_name">冰箱設定</string>
    <string name="title_activity_main2">MainActivity2</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>

</resources>