<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item android:id = "@+id/home"
        android:title = "@string/menu_home"
        android:icon = "@drawable/ic_home"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/placeholder"
        android:title = ""
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/placeholder2"
        android:title = ""
        app:showAsAction="ifRoom"/>

    <item android:id = "@+id/setting"
        android:title = "@string/menu_settings"
        android:icon = "@drawable/ic_settings"
        app:showAsAction="ifRoom"/>


    <item android:id = "@+id/filter"
        android:title = "@string/menu_filter"
        android:icon = "@drawable/ic_filter"
        app:showAsAction="ifRoom"/>


</menu>