<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/linearlayout"
    android:padding="16dp"
    tools:context=".SettingActivity">

    <!-- title-->

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="32dp"
        android:layout_height="32dp"
        android:layout_marginStart="24dp"
        android:layout_marginLeft="24dp"
        android:layout_marginEnd="24dp"
        android:layout_marginRight="24dp"
        android:importantForAccessibility="no"
        app:layout_constraintBottom_toBottomOf="@+id/fridge_dialog_textview1"
        app:layout_constraintEnd_toStartOf="@+id/fridge_dialog_textview1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/fridge_dialog_textview1"
        app:layout_constraintVertical_bias="0.488"
        app:srcCompat="@drawable/ic_add"
        tools:ignore="VectorDrawableCompat" />

    <TextView
        android:id="@+id/fridge_dialog_textview1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="100dp"
        android:layout_marginRight="100dp"
        android:text="@string/fridge_dialog_title1"
        android:textColor="@color/black"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/imageView"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="32dp"
        android:layout_height="32dp"
        android:layout_marginStart="24dp"
        android:layout_marginLeft="24dp"
        android:layout_marginEnd="24dp"
        android:layout_marginRight="24dp"
        android:importantForAccessibility="no"
        app:layout_constraintBottom_toBottomOf="@+id/fridge_dialog_textview2"
        app:layout_constraintEnd_toStartOf="@+id/fridge_dialog_textview2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/fridge_dialog_textview2"
        app:layout_constraintVertical_bias="0.555"
        app:srcCompat="@drawable/ic_edit"
        tools:ignore="VectorDrawableCompat" />

    <TextView
        android:id="@+id/fridge_dialog_textview2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="100dp"
        android:layout_marginRight="100dp"
        android:text="@string/fridge_dialog_title2"
        android:textColor="@color/black"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/imageView2"
        app:layout_constraintTop_toBottomOf="@+id/fridge_dialog_textview1" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="32dp"
        android:layout_height="32dp"
        android:layout_marginStart="30dp"
        android:layout_marginLeft="30dp"
        android:layout_marginEnd="15dp"
        android:layout_marginRight="15dp"
        android:importantForAccessibility="no"
        app:layout_constraintBottom_toBottomOf="@+id/line_dialog_textview"
        app:layout_constraintEnd_toStartOf="@+id/line_dialog_textview"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/line_dialog_textview"
        app:layout_constraintVertical_bias="0.577"
        app:srcCompat="@drawable/ic_account"
        tools:ignore="VectorDrawableCompat" />

    <TextView
        android:id="@+id/line_dialog_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="100dp"
        android:layout_marginRight="100dp"
        android:text="@string/line_dialog_setting"
        android:textColor="@color/black"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/imageView3"
        app:layout_constraintTop_toBottomOf="@+id/fridge_dialog_textview2" />

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="32dp"
        android:layout_height="32dp"
        android:layout_marginStart="30dp"
        android:layout_marginLeft="30dp"
        android:layout_marginEnd="14dp"
        android:layout_marginRight="14dp"
        android:importantForAccessibility="no"
        app:layout_constraintBottom_toBottomOf="@+id/fridge_setting_textview"
        app:layout_constraintEnd_toStartOf="@+id/fridge_setting_textview"
        app:layout_constraintHorizontal_bias="0.689"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/fridge_setting_textview"
        app:layout_constraintVertical_bias="0.511"
        app:srcCompat="@drawable/ic_settings_overscan"
        tools:ignore="VectorDrawableCompat" />

    <TextView
        android:id="@+id/fridge_setting_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="100dp"
        android:layout_marginRight="100dp"
        android:text="@string/fridge_setting"
        android:textColor="@color/black"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/imageView4"
        app:layout_constraintTop_toBottomOf="@+id/line_dialog_textview" />

    <ImageView
        android:id="@+id/imageView5"
        android:layout_width="32dp"
        android:layout_height="32dp"
        android:layout_marginStart="32dp"
        android:layout_marginLeft="32dp"
        android:layout_marginEnd="24dp"
        android:layout_marginRight="24dp"
        android:importantForAccessibility="no"
        app:layout_constraintBottom_toBottomOf="@+id/fridge_change_textview"
        app:layout_constraintEnd_toStartOf="@+id/fridge_change_textview"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/fridge_change_textview"
        app:srcCompat="@drawable/ic_change"
        tools:ignore="VectorDrawableCompat" />

    <TextView
        android:id="@+id/fridge_change_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="100dp"
        android:layout_marginRight="100dp"
        android:text="@string/change_fridge"
        android:textColor="@color/black"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.241"
        app:layout_constraintStart_toEndOf="@+id/imageView5"
        app:layout_constraintTop_toBottomOf="@+id/fridge_setting_textview" />

    <!--    <ListView-->
    <!--        android:id="@+id/settingList"-->
    <!--        android:layout_width="match_parent"-->
    <!--        android:layout_height="match_parent"-->
    <!--        app:layout_constraintBottom_toBottomOf="parent"-->
    <!--        app:layout_constraintEnd_toEndOf="parent"-->
    <!--        app:layout_constraintStart_toStartOf="parent"-->
    <!--        app:layout_constraintTop_toTopOf="parent" >-->

    <!--    </ListView>-->
</androidx.constraintlayout.widget.ConstraintLayout>